<resources>
    <string name="app_name">Center of Cat</string>
    <string name="title_cats">Котики</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_load">Загрузить Котиков</string>
    <string name="DetailContentDescription">Главное Изображение с Котом</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="kotiki">Котики</string>
    <string name="hi_cat_fans">Привет Всем любителям кошек</string>
</resources>