<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_1">

    <fragment
        android:id="@+id/navigation_1"
        android:name="com.example.centerofcat.app.ui.catList.CatsListFragment"
        android:label="@string/title_cats"
        tools:layout="@layout/fragment_cat_list" >

    </fragment>

    <fragment
        android:id="@+id/navigation_2"
        android:name="com.example.centerofcat.app.ui.catFavourites.FavouritesCatsFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" >

    </fragment>

    <fragment
        android:id="@+id/navigation_3"
        android:name="com.example.centerofcat.app.ui.loadCat.LoadCatFragment"
        android:label="@string/title_load"
        tools:layout="@layout/fragment_load" >

    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.centerofcat.app.ui.detailCatInfo.DetailCatInfoFragment"
        android:label="Информация о Котике"
        tools:layout="@layout/fragment_load" >

    </fragment>

</navigation>