<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_fragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >
            <ImageView
                android:id="@+id/detail_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/DetailContentDescription"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main.toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fontFamily="@font/compact_display_semibold"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <TextView
            android:id="@+id/description"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/compact_display_regular"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:lineSpacingExtra="8dp"
            android:text="@string/hi_cat_fans"
            android:padding="@dimen/activity_horizontal_margin"
            />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/like"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:borderWidth="0dp"
        android:contentDescription="@string/like"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/outline_thumb_up_24"
        android:backgroundTint="@color/orange_700"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|right|end"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:borderWidth="0dp"
        android:contentDescription="@string/dislike"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/outline_thumb_down_24"
        android:backgroundTint="@color/orange_700"
        app:layout_anchor="@+id/main.appbar"
        app:layout_anchorGravity="bottom|start|bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>